; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_fs_core.c_tree_init_node.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_fs_core.c_tree_init_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fs_node = type { void (%struct.fs_node*)*, void (%struct.fs_node*)*, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fs_node*, void (%struct.fs_node*)*, void (%struct.fs_node*)*)* @tree_init_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tree_init_node(%struct.fs_node* %0, void (%struct.fs_node*)* %1, void (%struct.fs_node*)* %2) #0 {
  %4 = alloca %struct.fs_node*, align 8
  %5 = alloca void (%struct.fs_node*)*, align 8
  %6 = alloca void (%struct.fs_node*)*, align 8
  store %struct.fs_node* %0, %struct.fs_node** %4, align 8
  store void (%struct.fs_node*)* %1, void (%struct.fs_node*)** %5, align 8
  store void (%struct.fs_node*)* %2, void (%struct.fs_node*)** %6, align 8
  %7 = load %struct.fs_node*, %struct.fs_node** %4, align 8
  %8 = getelementptr inbounds %struct.fs_node, %struct.fs_node* %7, i32 0, i32 6
  %9 = call i32 @refcount_set(i32* %8, i32 1)
  %10 = load %struct.fs_node*, %struct.fs_node** %4, align 8
  %11 = getelementptr inbounds %struct.fs_node, %struct.fs_node* %10, i32 0, i32 5
  %12 = call i32 @INIT_LIST_HEAD(i32* %11)
  %13 = load %struct.fs_node*, %struct.fs_node** %4, align 8
  %14 = getelementptr inbounds %struct.fs_node, %struct.fs_node* %13, i32 0, i32 4
  %15 = call i32 @INIT_LIST_HEAD(i32* %14)
  %16 = load %struct.fs_node*, %struct.fs_node** %4, align 8
  %17 = getelementptr inbounds %struct.fs_node, %struct.fs_node* %16, i32 0, i32 3
  %18 = call i32 @init_rwsem(i32* %17)
  %19 = load void (%struct.fs_node*)*, void (%struct.fs_node*)** %5, align 8
  %20 = load %struct.fs_node*, %struct.fs_node** %4, align 8
  %21 = getelementptr inbounds %struct.fs_node, %struct.fs_node* %20, i32 0, i32 0
  store void (%struct.fs_node*)* %19, void (%struct.fs_node*)** %21, align 8
  %22 = load void (%struct.fs_node*)*, void (%struct.fs_node*)** %6, align 8
  %23 = load %struct.fs_node*, %struct.fs_node** %4, align 8
  %24 = getelementptr inbounds %struct.fs_node, %struct.fs_node* %23, i32 0, i32 1
  store void (%struct.fs_node*)* %22, void (%struct.fs_node*)** %24, align 8
  %25 = load %struct.fs_node*, %struct.fs_node** %4, align 8
  %26 = getelementptr inbounds %struct.fs_node, %struct.fs_node* %25, i32 0, i32 2
  store i32 0, i32* %26, align 8
  ret void
}

declare dso_local i32 @refcount_set(i32*, i32) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @init_rwsem(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
